GNOME Bugzilla – Bug 724095
Fail to build with C++11 mode enabled
Last modified: 2014-02-11 12:48:39 UTC
Created attachment 268752 [details] [review] Fix build when using C++11 mode I get the error when building gjs with CXX="clang++ -std=c++11". totemPlugin.cpp:169:15: error: invalid suffix on literal; C++11 requires a space between literal and identifier [-Wreserved-user-defined-literal] "Quicktime/"TOTEM_NARROWSPACE_VERSION; ^
Sorry for the copy-and-paste. It is totem, not gjs.