browser-plugin: Fix build when using C++11 mode

totemPlugin.cpp:169:15: error: invalid suffix on literal; C++11 requires
a space between literal and identifier [-Wreserved-user-defined-literal]
  "Quicktime/"TOTEM_NARROWSPACE_VERSION;
             ^

https://bugzilla.gnome.org/show_bug.cgi?id=724095